master

1.0.30
- Zixaphir
  Fixed deadlink redirection

1.0.29
- Zixaphir
  Bugfix release
  - Icon Overlapping fixed
  - No themes being applied should be fixed
  - /pol/ is now correctly detected as a NSFW board

1.0.28
- Zixaphir
  Added Per-Board Personas.
  Fappe Tyme.
  Theme Editor slider now properly reflects current hue.
  QR has a default position in 'float' mode now.
  Added an option to make the updater moveable.
  Cached embed titles are now pruned after seven days.
  Fix Linkifier and <wbr>. Linkifier should now handle multi-lined links, I think.
- noface
  Added new feature 'Remove Spoilers'.
  Added input to specify height and width of embeds.
  Fixed Anonymize not working on stubs.
  Fixed deadquotes showing up in code-tags.
- Mayhem
  Fix posting warning not displaying the reason.
  Fix selection quoting on Opera.
  Fix history bug with Persistent QR enabled on Chrome.
  

1.0.27
- Zixaphir
  Fixed a bug involving malformed quotes generating an error. MOOOOOOOOT!!

1.0.26
- Zixaphir
  Fixed a prototyping bug resulting in an error with Embedding.

1.0.25
- Zixaphir
  Fixed a bug in the Archive Redirector that was causing an error popup (but was otherwise behaving correctly)
  Added a crunchbang emoji
  Added error-checking for the embedder title link

1.0.24
- Zixaphir
  Fixed a mascot bug which reported the mascot had no name
  New Options:
  - Shrink Ads
  - Hide Mascots on Catalog
- noface
  Added liveleak embedding and Vimeo Link Title.
- Mayhem
  Added catalog support:
    Sync thread hiding between index and catalog.

1.0.23
- Zixaphir
  Fixed catalog links bug
  Fixed catalog button being being overlapped by the navbar (and therefore unclickable)
  Fixed themes with transparent replies from having their background colors changed in the theme previews
  Navigation links should no longer be able to overlap or underlap appchan's icons
  Added an italic indicators for inlined post quotelinks/backlinks/forwardlinks.
  

1.0.22
- Zixaphir