@@ -803,7 +803,7 @@ Reason: #{$('.reason', doc).innerHTML}
     else if err = doc.getElementById 'errmsg' # error!
       if el = $('a', err)
         el.target = '_blank' # duplicate image link
-    else unless msg = $ 'b', doc
+    else if doc.title isnt 'Post successful!'
       err = 'Connection error with sys.4chan.org.'
 
     if err
@@ -852,7 +852,7 @@ Reason: #{$('.reason', doc).innerHTML}
       sub:   if Conf['Remember Subject']  then reply.sub     else null
     $.set 'persona', persona
 
-    [_, threadID, postID] = msg.lastChild.textContent.match /thread:(\d+),no:(\d+)/
+    [_, threadID, postID] = doc.body.lastChild.textContent.match /thread:(\d+),no:(\d+)/
     Updater.postID = postID
 
     # Post/upload confirmed as successful.
