@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Fix successful posting causing errors.
 
 1.0.30
 - Zixaphir
